k8s/nextcloud/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-route
  namespace: nextcloud
spec:
  parentRefs:
    - name: private
      namespace: envoy-gateway-system
  hostnames:
    - "nextcloud.neffi.fr"
  rules:
    - backendRefs:
        - name: nextcloud-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
